--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,9 @@
-:root {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+/* :root {
   --max-width: 1100px;
   --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
@@ -38,7 +43,7 @@
   --callout-border-rgb: 172, 175, 176;
   --card-rgb: 180, 185, 188;
   --card-border-rgb: 131, 134, 135;
-}
+} */
 
 @media (prefers-color-scheme: dark) {
   :root {
@@ -108,4 +113,30 @@ a {
 .active{
   color: red !important;
   background-color: red !important;
+}
+
+
+@keyframes rotationBack {
+  0% {
+      transform: rotate(0deg);
+  }
+
+  50% {
+      transform: rotate(-360deg);
+  }
+  100% {
+      transform: rotate(0deg);
+  }
+}
+
+
+.loaderr{
+  animation: rotationBack 2s ease-in-out infinite reverse  !important;
+  width: 48px !important;
+    height: 48px !important;
+    background: #353535 !important;
+    display: block !important;
+    margin: 20px auto !important;
+    position: relative !important;
+    box-sizing: border-box !important;
 }
